<resources>
    <string name="app_name">购物平台</string>
    <string name="app_description">你的生活助手</string>

    <string name="main_title">我的备忘录</string>
    <string name="add_memo">添加备忘录</string>
    <string name="search_hint">搜索备忘录...</string>
    <string name="no_memos">暂无备忘录，点击添加按钮创建第一个吧！</string>

    <string name="setting_title">设置</string>


    <!-- 添加/编辑备忘录 -->
    <string name="memo_title">标题</string>
    <string name="memo_content">内容</string>
    <string name="memo_category">分类</string>
    <string name="memo_priority">优先级</string>
    <string name="memo_reminder">提醒时间</string>
    <string name="save_memo">保存</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>

    <string name="category_work">工作</string>
    <string name="category_personal">个人</string>
    <string name="category_study">学习</string>
    <string name="category_shopping">购物</string>
    <string name="category_other">其他</string>

    <!-- 优先级 -->
    <string name="priority_high">高</string>
    <string name="priority_medium">中</string>
    <string name="priority_low">低</string>

    <!-- 天气相关 -->
    <string name="weather_title">今日天气</string>
    <string name="weather_location">位置</string>
    <string name="weather_temperature">温度</string>
    <string name="weather_humidity">湿度</string>
    <string name="weather_wind">风力</string>
    <string name="weather_refresh">刷新</string>

    <!-- 设置 -->
    <string name="settings_title">设置</string>
    <string name="theme_setting">主题设置</string>
    <string name="notification_setting">通知设置</string>
    <string name="backup_setting">备份设置</string>
    <string name="about">关于</string>

    <!-- 提示信息 -->
    <string name="save_success">保存成功</string>
    <string name="delete_success">删除成功</string>
    <string name="network_error">网络连接失败</string>
    <string name="location_error">获取位置失败</string>
    <string name="permission_denied">权限被拒绝</string>

    <!-- 对话框 -->
    <string name="confirm_delete">确认删除</string>
    <string name="delete_memo_message">确定要删除这条备忘录吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>

    <!-- 日期时间 -->
    <string name="select_date">选择日期</string>
    <string name="select_time">选择时间</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="yesterday">昨天</string>

</resources>